@@ -11,6 +11,7 @@ PHP 4                                                                      NEWS
 - Fixed bug #27171 (crash inside gmp_hamdist()). (Jani)
 - Fixed bug #27149 (broken CLOB support in oci8 extension). (Antony)
 - Fixed bug #27135 (Possible crash inside mb_strlen()). (Moriyoshi)
+- Fixed bug #27104 (CLI/CGI SAPI module variable name conflict). (Marcus)
 - Fixed bug #27026 (Added "cgi.nph" php.ini option to allow forcing of
   the 'Status: 200' header that is not normally needed). (Ilia)
 - Fixed bug #26862 (ob_flush() followed by output_reset_rewrite_vars() may
